Fixed collapsor in RP

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -216,6 +216,9 @@
       color: #3b4151;
       font-style: italic;
     }
+    .collapsor {
+      color: darken(#ddab76, 30%);
+    }
   }
 
   pre {
